--- a/index.html
+++ b/index.html
@@ -35,15 +35,20 @@
     <a href="https://www.mi.com/appdownload/">下载app</a>
     <span>|</span>
     <a href="#J_modal-globalSites"></a> Select Region</a>
-    <div class="yemeiright">
-      <a href="//order.mi.com/site/login?redirectUrl=https://www.mi.com/">登录</a>
-      <span>|</span>
-      <a href="https://account.xiaomi.com/pass/register">注册</a>
-
-
-    </div>
+      <div class="yemeiright">
+        <a href="//order.mi.com/site/login?redirectUrl=https://www.mi.com/">登录</a>
+        <span>|</span>
+        <a href="https://account.xiaomi.com/pass/register">注册</a>
+        <span>|</span>
+        <a href="https://order.mi.com/message/list">消息通知</a>
+      </div>
+  
+    
 
   </div>
+    <div class="logo">
+      <img src="photos/logo.png">
+    </div>
   
 </body>
 </html>
