--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
         <a href="https://account.xiaomi.com/pass/register">注册</a>
         <span>|</span>
         <a href="https://order.mi.com/message/list">消息通知</a>
+        </div>
+        <div class="shopping-car">
+          <a href="https://www.mi.com">购物车(0)</a>
+          <img src="photos/shopping-car.jpg">
+        </div>
       </div>
+      
   
     
 
